--- a/launch.html
+++ b/launch.html
@@ -7,8 +7,8 @@
     <script src="node_modules/fhirclient/fhir-client.js"></script>
     <script>
       FHIR.oauth2.authorize({
-        "client_id": "growth_chart",
-        "scope":  "patient/*.read"
+        "client_id": "6988008c-d6d5-42d5-8e63-c6f5baeea4e7",
+        "scope":  "patient/Patient.read patient/Observation.read"
       });
     </script>
   </head>
