--- a/launch.html
+++ b/launch.html
@@ -8,7 +8,8 @@
     <script>
       FHIR.oauth2.authorize({
         "client_id": "growth_chart",
-        "scope":  "patient/*.read"
+        // "scope":  "patient/*.read"
+        "scope": "patient/AllergyIntolerance.read patient/Appointment.read patient/Binary.read patient/Condition.read patient/Contract.read patient/Device.read patient/DiagnosticReport.read patient/Encounter.read patient/Immunization.read patient/MedicationOrder.read patient/MedicationStatement.read patient/Observation.read patient/Patient.read patient/Person.read patient/RelatedPerson.read launch online_access openid profile"
       });
     </script>
   </head>
